Rearranged the logo and title
rearranged the logo and title so it can stand right next to each other

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Lotify</title>
 </head>
 <body>
-    <h1>Lotify, das besser Spotify</h1>
-    <img src="lotify_logo.png" alt="Lotify">
+    <div class="header">
+        <img src="lotify_logo.png" alt="Lotify">
+        <h1>Lotify, das besser Spotify</h1>
+    </div>
 </body>
 </html>
