--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="header">
         <img src="lotify_logo.png" alt="Lotify">
         <h1>Lotify, das besser Spotify</h1>
+        <p>Lotify ist eine App, welches das beste von allen Musikapps vereint</p>
+        <p>Lotify ist ein Musikplayer, welches Musik abspielen lassen kann.</p>
+        <p>Man erhält eine wunderschöne Playlist mit buttons, welche man anklicken kann um die Musik abspielen zu lassen</p>
+        <img src="playlist.png" alt="Playlist">
     </div>
 </body>
 </html>
