Description and picture
Added more description and a picture of the musicplayer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="header">
         <img src="lotify_logo.png" alt="Lotify">
         <h1>Lotify, das besser Spotify</h1>
-        <p>Lotify ist eine App, welches das beste von allen Musikapps vereint</p>
         <p>Lotify ist ein Musikplayer, welches Musik abspielen lassen kann.</p>
-        <p>Man erhält eine wunderschöne Playlist mit buttons, welche man anklicken kann um die Musik abspielen zu lassen</p>
+        <p>Man erhält eine Playlist mit buttons um seine Musik auszuwählen</p>
         <img src="playlist.png" alt="Playlist">
+        <p>Nach der Auswahl kann man die Musik abspielen lassen mit Optionen</p>
+        <img src="musicplayer.png" alt="Musicplayer">
     </div>
 </body>
 </html>
