--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div class="header">
         <img src="lotify_logo.png" alt="Lotify">
         <h1>Lotify, das besser Spotify</h1>
+        
+    </div>
+    <div class="body">
         <p>Lotify ist ein Musikplayer, welches Musik abspielen lassen kann.</p>
-        <p>Man erhält eine Playlist mit buttons um seine Musik auszuwählen</p>
+        <p>Man erhält eine Playlist mit buttons um seine Musik auszuwählen, diese wird dann abgespielt</p>
         <img src="playlist.png" alt="Playlist">
-        <p>Nach der Auswahl kann man die Musik abspielen lassen mit Optionen</p>
         <img src="musicplayer.png" alt="Musicplayer">
+        <img src="App.png" alt="App">
     </div>
 </body>
 </html>
